--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.32.2",
+    "@clerk/nextjs": "6.37.5",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -50,11 +50,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
-    "next": "15.5.0",
+    "next": "^15.5.12",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "18.3.1",
     "react-day-picker": "^9.11.0",
-    "react-dom": "19.1.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
@@ -68,8 +68,8 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
